SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/EBizcharge_Setting__c.object-meta.xml
<CustomObject>
    <label>EBizcharge Setting</label>
    <nameField>
        <label>EBizcharge Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBizcharge Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>