SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Allow_Opportunity_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Allow_Opportunity_Payment_Type__c</fullName>
    <label>Allow Opportunity Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-auths and Deposit</fullName>
            </value>
            <value>
                <fullName>Pre-auths</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>