SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Allow_Partial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Partial_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Partial Payment</label>
    <type>Checkbox</type>
</CustomField>