SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <label>Application ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>b31d6acb-c2d7-4c37-80c7-d663b1b008ed</fullName>
                <default>true</default>
                <label>b31d6acb-c2d7-4c37-80c7-d663b1b008ed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>