SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Auto_Apply_Received_Payment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Apply_Received_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Apply Received Payment</label>
    <type>Checkbox</type>
</CustomField>