SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Auto_Upload_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Auto_Upload_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Upload Opportunity</label>
    <type>Checkbox</type>
</CustomField>