SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Auto_Upload_Order__c.field-meta.xml
<CustomField>
    <fullName>Auto_Upload_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If value true, Order will upload on gateway upon creation or modification</description>
    <inlineHelpText>If value true, Order will upload on gateway upon creation or modification</inlineHelpText>
    <label>Auto Upload Order</label>
    <type>Checkbox</type>
</CustomField>