SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_90_days__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_90_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPay_90_days</label>
    <type>Checkbox</type>
</CustomField>