SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_bi_annually__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_bi_annually__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoPay bi annually</label>
    <type>Checkbox</type>
</CustomField>