SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_daily__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_daily__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoPay daily</label>
    <type>Checkbox</type>
</CustomField>