SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_four_week__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_four_week__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoPay four week</label>
    <type>Checkbox</type>
</CustomField>