SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_monthly__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_monthly__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoPay monthly</label>
    <type>Checkbox</type>
</CustomField>