SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_once__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_once__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPay once</label>
    <type>Checkbox</type>
</CustomField>