SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_quarterly__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_quarterly__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoPay quarterly</label>
    <type>Checkbox</type>
</CustomField>