SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_six_month__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_six_month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPay_six_month</label>
    <type>Checkbox</type>
</CustomField>