SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_three_month__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_three_month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPay_three_month</label>
    <type>Checkbox</type>
</CustomField>