SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/AutoPay_weekly__c.field-meta.xml
<CustomField>
    <fullName>AutoPay_weekly__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoPay weekly</label>
    <type>Checkbox</type>
</CustomField>