SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Data_Flow_Direction__c.field-meta.xml
<CustomField>
    <fullName>Data_Flow_Direction__c</fullName>
    <label>Data Flow Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce to Epicore</fullName>
                <default>true</default>
                <label>Salesforce to Epicore</label>
            </value>
            <value>
                <fullName>Epicore to Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>