SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Data_Integration__c.field-meta.xml
<CustomField>
    <fullName>Data_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Integration</label>
    <type>Checkbox</type>
</CustomField>