SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Disable_all_frequencies__c.field-meta.xml
<CustomField>
    <fullName>Disable_all_frequencies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable all frequencies</label>
    <type>Checkbox</type>
</CustomField>