SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Division_ID__c.field-meta.xml
<CustomField>
    <fullName>Division_ID__c</fullName>
    <label>Division ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>