SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizC_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>EbizC_Customer_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EbizC Customer Type</label>
    <type>Checkbox</type>
</CustomField>