SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizC_Source__c.field-meta.xml
<CustomField>
    <fullName>EbizC_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EbizC Source</label>
    <type>Checkbox</type>
</CustomField>