SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizC_Status__c.field-meta.xml
<CustomField>
    <fullName>EbizC_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EbizC  Status</label>
    <type>Checkbox</type>
</CustomField>