SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EbizCharge Date and Time</label>
    <type>Checkbox</type>
</CustomField>