SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Ebizcharge_Accounts_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Ebizcharge_Accounts_Last_Sync_Date__c</fullName>
    <label>Ebizcharge Accounts Last Sync Date</label>
    <type>DateTime</type>
</CustomField>