SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Amount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EbizCharge Amount</label>
    <type>Checkbox</type>
</CustomField>