SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Auth_Code__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EbizCharge Auth Code</label>
    <type>Checkbox</type>
</CustomField>