SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Card_Holder__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Card_Holder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EbizCharge Card Holder Name</label>
    <type>Checkbox</type>
</CustomField>