SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Custom_Email_Pay__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Custom_Email_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EbizCharge Custom Email Pay</label>
    <type>Checkbox</type>
</CustomField>