SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizCharge_IsLogEnable__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_IsLogEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBizCharge IsLogEnable</label>
    <type>Checkbox</type>
</CustomField>