SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_IsLogErrorEnable__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_IsLogErrorEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBizcharge IsLogErrorEnable</label>
    <type>Checkbox</type>
</CustomField>