SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_IsLogExceptionEnable__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_IsLogExceptionEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBizcharge IsLogExceptionEnable</label>
    <type>Checkbox</type>
</CustomField>