SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_IsLogInfoEnable__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_IsLogInfoEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBizcharge IsLogInfoEnable</label>
    <type>Checkbox</type>
</CustomField>