SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_IsLogWarningEnable__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_IsLogWarningEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBizcharge IsLogWarningEnable</label>
    <type>Checkbox</type>
</CustomField>