SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_Last_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_Last_Import_Date__c</fullName>
    <label>EBizcharge Last Import Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>