SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_Manage_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_Manage_Payment_Method__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EBizcharge Manage Payment Method</label>
    <type>Checkbox</type>
</CustomField>