SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Notify_Customer__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Notify_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EbizCharge Notify Customer</label>
    <type>Checkbox</type>
</CustomField>