SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Order_Number__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EbizCharge Order Number</label>
    <type>Checkbox</type>
</CustomField>