SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Payment_Method__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EbizCharge Payment Method</label>
    <type>Checkbox</type>
</CustomField>