SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Reference_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EbizCharge Reference Number</label>
    <type>Checkbox</type>
</CustomField>