SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_Request_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_Request_Payment_Method__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EBizcharge Request Payment Method</label>
    <type>Checkbox</type>
</CustomField>