SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Result__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EbizCharge Result</label>
    <type>Checkbox</type>
</CustomField>