SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizCharge_Schedule_Job_Frequencies__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Schedule_Job_Frequencies__c</fullName>
    <label>EBizCharge Schedule Job Frequencies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Minute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>