SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_Schedule_Recurring_Payment__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_Schedule_Recurring_Payment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EBizcharge Schedule Recurring Payment</label>
    <type>Checkbox</type>
</CustomField>