SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_Send_Email_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_Send_Email_Payment_Request__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EBizcharge Send Email Payment Request</label>
    <type>Checkbox</type>
</CustomField>