SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Standard_Email_Pay__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Standard_Email_Pay__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EbizCharge Standard Email Pay</label>
    <type>Checkbox</type>
</CustomField>