SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EBizcharge_Sync_Contacts_OnInstall__c.field-meta.xml
<CustomField>
    <fullName>EBizcharge_Sync_Contacts_OnInstall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBizcharge Sync Contacts OnInstall</label>
    <type>Checkbox</type>
</CustomField>