SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/EbizCharge_Type__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Type__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EbizCharge Type</label>
    <type>Checkbox</type>
</CustomField>