SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Enable_all_frequencies__c.field-meta.xml
<CustomField>
    <fullName>Enable_all_frequencies__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable all frequencies</label>
    <type>Checkbox</type>
</CustomField>