SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>