SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Payments_Tab__c.field-meta.xml
<CustomField>
    <fullName>Payments_Tab__c</fullName>
    <defaultValue>&apos;Sale&apos;</defaultValue>
    <label>Payments Tab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>AuthOnly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>