SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Save_Transactions_Locally__c.field-meta.xml
<CustomField>
    <fullName>Save_Transactions_Locally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Transactions Locally</label>
    <type>Checkbox</type>
</CustomField>