SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Security_Token__c</fullName>
    <label>Security Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>