SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Show_Tax_Field__c.field-meta.xml
<CustomField>
    <fullName>Show_Tax_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Tax Field</label>
    <type>Checkbox</type>
</CustomField>