SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Sync_Recurring_Payment_Filter_By__c.field-meta.xml
<CustomField>
    <fullName>Sync_Recurring_Payment_Filter_By__c</fullName>
    <label>Sync Recurring Payment Filter By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>Next Week</fullName>
            </value>
            <value>
                <fullName>Next Month</fullName>
            </value>
            <value>
                <fullName>Next Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>