SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Tax_Action__c.field-meta.xml
<CustomField>
    <fullName>Tax_Action__c</fullName>
    <defaultValue>&apos;Tax Included&apos;</defaultValue>
    <label>Tax Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Included</fullName>
                <default>true</default>
                <label>Tax Included</label>
            </value>
            <value>
                <fullName>Tax Calculate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>