SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Tax_Calculate_By__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calculate_By__c</fullName>
    <label>Tax Calculate By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>