SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Tax_Default_Percent__c.field-meta.xml
<CustomField>
    <fullName>Tax_Default_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tax Default Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>