SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Tax_Manual_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Manual_Type__c</fullName>
    <label>Tax Manual Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Percent</fullName>
            </value>
            <value>
                <fullName>Use Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>