SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Transaction_Filter_By__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Filter_By__c</fullName>
    <defaultValue>&apos;Past Week&apos;</defaultValue>
    <label>Transaction Filter By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>Past Week</fullName>
                <default>true</default>
                <label>Past Week</label>
            </value>
            <value>
                <fullName>Past Month</fullName>
            </value>
            <value>
                <fullName>Past Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>