SFQBD/Ebiz/force-app/main/default/objects/EBizcharge_Setting__c/fields/Use_Custom_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Use_Custom_Opportunity_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Custom Opportunity Amount</label>
    <type>Checkbox</type>
</CustomField>